Add providers for modal service so services instances can be shared

--- a/client/src/app/features/usage-statistics/training-stats-comparison/training-stats-comparison-config.component.html
+++ b/client/src/app/features/usage-statistics/training-stats-comparison/training-stats-comparison-config.component.html
@@ -5,7 +5,7 @@
 />
 
 <div class="select-container">
-  <app-select [isSearchable]="false" [options]="trainingPlanTitles()" [(selectedOptions)]="selectedTrainingPlan" />
+  <app-select [isSearchable]="false" [options]="trainingPlanTitles()" [(selectedOptions)]="selectedTrainingPlans" />
 </div>
 
 <div class="floating-label-grid">
