Add basic logic for generating comparison charts

--- a/client/src/app/features/usage-statistics/statistics.component.html
+++ b/client/src/app/features/usage-statistics/statistics.component.html
@@ -1,3 +1,7 @@
-<app-line-chart />
+@if (selectedDataViewOption() === TrainingStatisticsDataView.VOLUME) {
+  <app-line-chart [yAxisTitle]="'Tonnage ' + selectedCategory()" [data]="volumeChartData()" />
+} @else {
+  <app-line-chart [yAxisTitle]="'Est. Max ' + selectedCategory()" [data]="performanceChartData()" />
+}
 
 <app-training-day-notification [notificationsInput]="notificationService.trainingDayNotifications()" />
