--- a/client/src/app/features/usage-statistics/statistics.component.scss
+++ b/client/src/app/features/usage-statistics/statistics.component.scss
@@ -4,6 +4,12 @@
   gap: 1.5rem;
 }
 
+.floating-label-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.85rem;
+}
+
 .configuration-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
