Actually redirect to logs fix login modal

--- a/client/src/app/features/profile-2/training-logs/training-logs.component.html
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.html
@@ -1,1 +1,5 @@
+@if (notificationService.trainingDayNotifications().length === 0) {
+  <app-alert [alertText]="'Es sind momentan keine Benachrichtigungen vorhanden'" />
+}
+
 <app-training-day-notification [notificationsInput]="notificationService.trainingDayNotifications()" />
