--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -31,11 +31,6 @@
                 actualRPE: '',
                 estMax: '',
               };
-            @let previousTrainingDayExercise =
-              trainingDataService.trainingPlanData.previousTrainingDay?.exercises?.[i] ?? {
-                exercise: undefined,
-                weight: undefined,
-              };
             @let namePrefix = 'day' + trainingDayIndex + '_exercise' + k + '_';
 
             <tr cdkDrag>
@@ -80,13 +75,11 @@
                 />
               </td>
               <td class="weight-data-cell" data-cell="Weight">
-                @let exerciseThisWeek = exercise?.exercise;
-                @let previousWeekExercise = previousTrainingDayExercise?.exercise;
+                @let weightRecommandation = trainingDataService.trainingPlanData.weightRecommandations?.[i - 1] ?? '';
+                <div>{{ weightRecommandation }}</div>
                 <app-input
                   class="weight"
-                  [placeholder]="
-                    exerciseThisWeek && previousWeekExercise ? previousTrainingDayExercise?.weight || '' : ''
-                  "
+                  [placeholder]="weightRecommandation"
                   [type]="'text'"
                   [name]="namePrefix + 'weight'"
                   [directiveUsed]="'weightInputDirective'"
@@ -141,11 +134,7 @@
                 actualRPE: '',
                 estMax: '',
               };
-            @let previousTrainingDayExercise =
-              trainingDataService.trainingPlanData.previousTrainingDay?.exercises?.[i] ?? {
-                exercise: undefined,
-                weight: undefined,
-              };
+
             @let namePrefix = 'day' + trainingDayIndex + '_exercise' + k + '_';
 
             <tr>
@@ -190,13 +179,10 @@
                 />
               </td>
               <td class="weight-data-cell" data-cell="Weight">
-                @let exerciseThisWeek = exercise?.exercise;
-                @let previousWeekExercise = previousTrainingDayExercise?.exercise;
+                @let weightRecommandation = trainingDataService.trainingPlanData.weightRecommandations?.[i] ?? '';
                 <app-input
                   class="weight"
-                  [placeholder]="
-                    exerciseThisWeek && previousWeekExercise ? previousTrainingDayExercise?.weight || '' : ''
-                  "
+                  [placeholder]="weightRecommandation"
                   [type]="'text'"
                   [name]="namePrefix + 'weight'"
                   [directiveUsed]="'weightInputDirective'"
