Refactor training day notification to only be responsible for one entry

--- a/client/src/app/features/profile-2/training-logs/training-logs.component.html
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.html
@@ -2,4 +2,6 @@
   <app-alert [alertText]="'Es sind momentan keine Benachrichtigungen vorhanden'" />
 }
 
-<app-training-day-notification [notificationsInput]="notificationService.trainingDayNotifications()" />
+@for (notification of notificationService.trainingDayNotifications(); track notification.id) {
+  <app-training-day-notification [notification]="notification" />
+}
