--- a/client/src/app/features/usage-statistics/training-day-notification/training-day-notification.component.html
+++ b/client/src/app/features/usage-statistics/training-day-notification/training-day-notification.component.html
@@ -1,24 +1,28 @@
-<div class="training-notification-card">
+<div class="notification-card">
   <div class="training-notification-header">
-    <h5>Training Day Summary</h5>
+    <h5>Training</h5>
     <app-icon [size]="22" [name]="IconName.X" (click)="deleteNotification()" />
   </div>
   <div class="training-notification-body">
     <p>
       @if (notification().startTime) {
-        <strong>Date:</strong> {{ notification().startTime! | formatDate }}<br />
+        <div class="notification-text-container">
+          <app-icon [name]="IconName.CALENDAR" [color]="'#666'" />
+          {{ notification().startTime! | formatDate }}
+        </div>
       }
-      <strong>Duration:</strong> {{ notification().durationInMinutes }} minutes<br />
-      <strong>Total Tonnage:</strong> {{ notification().trainingDayTonnage }} kg
     </p>
-    <div class="exercise-headline" (click)="toggleExerciseTab()">
-      Exercises
-      @if (notification().exerciseTabCollapsed) {
-        <app-icon [name]="IconName.ChevronDown" />
-      } @else {
-        <app-icon [name]="IconName.ChevronUp" />
-      }
+
+    <div class="notification-text-container">
+      <app-icon [name]="IconName.CLOCK" [color]="'#666'" />
+      {{ notification().durationInMinutes }} Minuten
     </div>
+
+    <div class="notification-text-container">
+      <app-icon [name]="IconName.BAR_CHART" [color]="'#666'" />
+      {{ notification().trainingDayTonnage }} Tonnage
+    </div>
+
     <div class="exercises-container" [@toggleCollapse]="notification().exerciseTabCollapsed ? 'collapsed' : 'expanded'">
       @for (exercise of notification().exercises; track exercise) {
         <div class="exercise-card">
@@ -29,16 +33,19 @@
           @if (exercise.actualRPE) {
             <p>RPE: {{ exercise.actualRPE }}</p>
           }
+          @if (exercise.estMax) {
+            <p>Est. Max {{ exercise.estMax }}</p>
+          }
         </div>
       }
     </div>
-    <div class="d-flex g-3">
-      <button class="btn btn-light" (click)="goToTrainingPlan()">Zum Trainingsplan gehen</button>
+    <div class="notification-card-footer">
+      <app-button (clicked)="goToTrainingPlan()" [textContent]="'Zum Trainingsplan gehen'" />
       <app-circular-icon-button
         [appTooltip]="'Teilen'"
         [icon]="IconName.SHARE"
         [iconSize]="16"
-        (clicked)="shareTrainingLog()"
+        (click)="shareTrainingLog()"
       />
     </div>
   </div>
