--- a/client/src/app/features/usage-statistics/training-day-notification/training-day-notification.component.scss
+++ b/client/src/app/features/usage-statistics/training-day-notification/training-day-notification.component.scss
@@ -1,20 +1,16 @@
-.training-notification-card {
-  background-color: #f9f9f9;
+.notification-card {
+  background-color: rgba(252, 252, 252, 0.65);
   border-radius: 8px;
   border: 1px solid #ddd;
   padding: 16px;
   margin-bottom: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition:
     box-shadow 0.3s ease-in-out,
     transform 0.3s ease-in-out;
 
   &:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transform: scale(1.01);
-  }
-
-  app-close-icon:hover {
-    cursor: pointer;
+    box-shadow: 0 8px 16px rgba(249, 222, 222, 0.2);
   }
 }
 
@@ -31,18 +27,28 @@
     font-size: 1.2em;
     color: #333;
   }
+
+  & app-icon {
+    cursor: pointer;
+  }
 }
 
 .training-notification-body {
-  font-size: 0.95em;
-  color: #666;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.notification-text-container {
+  display: flex;
+  align-items: center;
+  gap: 0.625rem;
 }
 
 .exercises-container {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  margin-top: 10px;
 }
 
 .exercise-headline {
@@ -76,17 +82,9 @@
   }
 }
 
-.mt-3 {
-  margin-top: 1rem;
-}
-
-.btn.btn-light {
-  background-color: #e7e7e7;
-  border: 1px solid #ccc;
-  color: #333;
-  transition: background-color 0.2s;
-
-  &:hover {
-    background-color: #d6d6d6;
-  }
+.notification-card-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
 }
