Change accent color

--- a/client/src/app/features/usage-statistics/training-day-notification/training-day-notification.component.scss
+++ b/client/src/app/features/usage-statistics/training-day-notification/training-day-notification.component.scss
@@ -71,7 +71,7 @@
   strong {
     display: block;
     font-size: 1em;
-    color: #0056b3;
+    color: var(--accent-color);
     margin-bottom: 6px;
   }
 
