--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,7 +4,7 @@
 @import './app/css/tables.scss';
 
 :root {
-  --accent-color: #a78bfa;
+  --accent-color: #0483c8;
 
   --light-grey: #f0f0f0;
   --dark-grey: #2e3a40;
