--- a/client/src/app/shared/components/percentage-circle-visualisation/percentage-circle-visualisation.component.html
+++ b/client/src/app/shared/components/percentage-circle-visualisation/percentage-circle-visualisation.component.html
@@ -6,8 +6,8 @@
   <defs>
     <!-- Gradient for the background ring -->
     <linearGradient id="backgroundGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-      <stop offset="0%" style="stop-color: #04a1c8; stop-opacity: 1" />
-      <stop offset="100%" style="stop-color: #35bfe2; stop-opacity: 1" />
+      <stop offset="0%" style="stop-color: #a78bfa; stop-opacity: 1" />
+      <stop offset="100%" style="stop-color: #a78bfa; stop-opacity: 1" />
     </linearGradient>
 
     <!-- Gradient for the progress ring -->
