Add working version of statistics page for session

--- a/client/src/app/features/training-session/training-session-statistics/training-session-statistics.component.html
+++ b/client/src/app/features/training-session/training-session-statistics/training-session-statistics.component.html
@@ -1,1 +1,12 @@
-<p>Works</p>
+@if (isLoaded()) {
+  <div class="chart-grid">
+    <app-line-chart [data]="tonnageChartData()" yAxisTitle="Tonnage (kg)" />
+
+    <app-line-chart [data]="performanceChartData()" yAxisTitle="Est. Max (kg)" />
+  </div>
+} @else {
+  <div class="chart-grid">
+    <app-chart-skeleton />
+    <app-chart-skeleton />
+  </div>
+}
