--- a/client/src/app/shared/components/input/input.component.scss
+++ b/client/src/app/shared/components/input/input.component.scss
@@ -2,19 +2,12 @@
   border: none;
   background-color: transparent;
   width: 100%;
-}
 
+  text-align: center;
+}
 .transparent-input:focus {
   border: none;
   outline: none;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-center {
-  text-align: center;
 }
 
 /* Hide up and down arrows from number inputs */
@@ -31,4 +24,10 @@ input[type='number']::-webkit-inner-spin-button {
 /* Remove up and down arrows in IE10+ */
 input[type='number'] {
   -ms-appearance: textfield;
+}
+
+@media screen and (max-width: 768px) {
+  .transparent-input {
+    text-align: left;
+  }
 }
