Actually use tel keyboard

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -89,7 +89,7 @@
               <td data-cell="RPE">
                 <app-input
                   class="targetRPE"
-                  [type]="'number'"
+                  [type]="'tel'"
                   [name]="namePrefix + 'targetRPE'"
                   [directiveUsed]="'rpeInputDirective'"
                   [value]="exercise.targetRPE"
@@ -183,7 +183,7 @@
                 <app-input
                   class="weight"
                   [placeholder]="weightRecommandation"
-                  [type]="'text'"
+                  [type]="'tel'"
                   [name]="namePrefix + 'weight'"
                   [directiveUsed]="'weightInputDirective'"
                   [value]="exercise.weight || ''"
@@ -192,7 +192,7 @@
               <td data-cell="RPE">
                 <app-input
                   class="targetRPE"
-                  [type]="'text'"
+                  [type]="'tel'"
                   [name]="namePrefix + 'targetRPE'"
                   [directiveUsed]="'rpeInputDirective'"
                   [value]="exercise.targetRPE"
@@ -201,7 +201,7 @@
               <td data-cell="@RPE">
                 <app-input
                   class="actualRPE"
-                  [type]="'text'"
+                  [type]="'tel'"
                   [name]="namePrefix + 'actualRPE'"
                   [directiveUsed]="'rpeInputDirective'"
                   [value]="exercise.actualRPE || ''"
