--- a/client/src/app/features/training-session/session-view/session-view.component.html
+++ b/client/src/app/features/training-session/session-view/session-view.component.html
@@ -71,7 +71,7 @@
           <td class="weight-data-cell" data-cell="Weight">
             <app-input
               class="weight"
-              [type]="'text'"
+              [type]="'tel'"
               [name]="namePrefix + 'weight'"
               [directiveUsed]="'weightInputDirective'"
               [value]="exercise.weight || ''"
@@ -80,7 +80,7 @@
           <td data-cell="RPE">
             <app-input
               class="targetRPE"
-              [type]="'text'"
+              [type]="'tel'"
               [name]="namePrefix + 'targetRPE'"
               [directiveUsed]="'rpeInputDirective'"
               [value]="exercise.targetRPE"
@@ -89,7 +89,7 @@
           <td data-cell="@RPE">
             <app-input
               class="actualRPE"
-              [type]="'text'"
+              [type]="'tel'"
               [name]="namePrefix + 'actualRPE'"
               [directiveUsed]="'rpeInputDirective'"
               [value]="exercise.actualRPE || ''"
