Fix type binding issue

--- a/client/src/app/shared/components/input/input.component.html
+++ b/client/src/app/shared/components/input/input.component.html
@@ -2,7 +2,7 @@
   @case ('interactiveElementDirective') {
     <input
       appInteractiveElement
-      type="type()"
+      [type]="type()"
       class="transparent-input"
       [name]="name()"
       [placeholder]="placeholder()"
@@ -13,7 +13,7 @@
   @case ('weightInputDirective') {
     <input
       weightInput
-      type="type()"
+      [type]="type()"
       class="transparent-input"
       [name]="name()"
       [placeholder]="placeholder()"
@@ -24,7 +24,7 @@
   @case ('repInputDirective') {
     <input
       repInputDirective
-      type="type()"
+      [type]="type()"
       class="transparent-input"
       [name]="name()"
       [placeholder]="placeholder()"
@@ -35,7 +35,7 @@
   @case ('rpeInputDirective') {
     <input
       rpeInputDirective
-      type="type()"
+      [type]="type()"
       class="transparent-input"
       [name]="name()"
       [placeholder]="placeholder()"
