--- a/client/src/app/features/profile-2/profile.component.scss
+++ b/client/src/app/features/profile-2/profile.component.scss
@@ -3,8 +3,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1.25rem;
-  margin-top: 0.5rem;
   width: 100%;
 
   p {
@@ -23,21 +21,15 @@
 .profile-header-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  align-items: center;
   gap: 1rem;
   position: relative;
-
-  img {
-    height: 5rem;
-    width: 5rem;
-    border: 4px solid white;
-    border-radius: 1rem;
-  }
+  height: 6rem;
 
   #file-input {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     height: 5rem;
     width: 5rem;
     border-radius: 1rem;
