--- a/client/src/app/shared/components/profile-picture/profile-picture.component.scss
+++ b/client/src/app/shared/components/profile-picture/profile-picture.component.scss
@@ -1,16 +1,16 @@
 :host {
-  width: 100%;
-  height: 100%;
-  padding: 0.35em;
-  padding-right: 0;
-  max-width: 4rem;
+  width: 85%;
+  height: 85%;
+  max-width: 4.5rem;
+  max-height: 4.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 4px 8px rgba(191, 191, 191, 0.2); // Adjust shadow as necessary
+  border-radius: 50%;
 
   .rounded-circle {
     padding: 0.5em;
-    border-radius: 50%;
     cursor: pointer;
   }
 }
