Add profile picture with info component + cleaner api

--- a/client/src/app/features/header/header.component.html
+++ b/client/src/app/features/header/header.component.html
@@ -15,5 +15,8 @@
     }
   </div>
 } @else {
-  <app-profile-picture (onProfilePictureClick)="onProfilePictureClick()" />
+  <app-profile-picture
+    [profilePicture]="profileService.pictureUrl()!"
+    (onProfilePictureClick)="onProfilePictureClick()"
+  />
 }
