--- a/client/src/app/shared/components/profile-picture/profile-picture.component.html
+++ b/client/src/app/shared/components/profile-picture/profile-picture.component.html
@@ -1,1 +1,1 @@
-<img [src]="profileService.pictureUrl() || '/images/profile-placeholder.webp'" alt="M" class="h-100 rounded-circle" />
+<img [src]="profilePicture() || '/images/profile-placeholder.webp'" alt="M" class="h-100 rounded-circle" />
