Add basic structure for training new training cards

--- a/client/src/app/features/profile-2/training-logs/training-logs.component.html
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.html
@@ -1,3 +1,8 @@
+<div class="test">
+  <app-training-day-notification-2 />
+  <app-training-day-notification-2 />
+</div>
+
 @if (notificationService.trainingDayNotifications().length === 0) {
   <app-alert [alertText]="'Es sind momentan keine Benachrichtigungen vorhanden'" />
 }
