--- a/client/src/app/shared/components/more-options-button/more-options-button.component.scss
+++ b/client/src/app/shared/components/more-options-button/more-options-button.component.scss
@@ -11,8 +11,10 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 
-  top: 3rem;
-  right: 3%;
+  /* top: 3rem;
+  right: 3%; */
+  top: 1rem;
+  right: 4rem;
 
   @media (max-height: 600px) {
     transform: translateY(-100%);
