Remove email test router, unused service functions

--- a/client/src/app/features/profile-2/training-logs/training-logs.component.html
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.html
@@ -1,7 +1,7 @@
-<div class="test">
+<!-- <div class="test">
   <app-training-day-notification-2 />
   <app-training-day-notification-2 />
-</div>
+</div> -->
 
 @if (notificationService.trainingDayNotifications().length === 0) {
   <app-alert [alertText]="'Es sind momentan keine Benachrichtigungen vorhanden'" />
