Resolve api issues with new notification component

--- a/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
+++ b/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
@@ -1,6 +1,6 @@
 <div class="image-container">
   <img [src]="coverImage()" alt="{{ title() }}" />
-  <div class="duration-overlay">{{ trainingDuration() }}</div>
+  <div class="duration-overlay">{{ trainingDuration() + ' Minuten' }}</div>
 </div>
 
 <div class="training-info">
