--- a/client/src/app/features/profile-2/training-logs/training-logs.component.html
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.html
@@ -9,4 +9,11 @@
 
 @for (notification of notificationService.trainingDayNotifications(); track notification.id) {
   <app-training-day-notification [notification]="notification" />
+
+  <app-training-day-notification-2
+    [id]="notification.id"
+    [title]="'Test'"
+    [trainingDuration]="notification.durationInMinutes!"
+    [startDate]="notification.startTime!"
+  />
 }
