--- a/client/src/app/features/profile-2/training-logs/training-logs.component.html
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.html
@@ -1,19 +1,15 @@
-<!-- <div class="test">
-  <app-training-day-notification-2 />
-  <app-training-day-notification-2 />
-</div> -->
-
 @if (notificationService.trainingDayNotifications().length === 0) {
   <app-alert [alertText]="'Es sind momentan keine Benachrichtigungen vorhanden'" />
 }
 
-@for (notification of notificationService.trainingDayNotifications(); track notification.id) {
-  <app-training-day-notification [notification]="notification" />
-
-  <app-training-day-notification-2
-    [id]="notification.id"
-    [title]="'Test'"
-    [trainingDuration]="notification.durationInMinutes!"
-    [startDate]="notification.startTime!"
-  />
-}
+<div class="grid">
+  @for (notification of notificationService.trainingDayNotifications(); track notification.id) {
+    <app-training-day-notification-2
+      [id]="notification.id"
+      [title]="'Test'"
+      [trainingDuration]="notification.durationInMinutes!"
+      [startDate]="notification.startTime!"
+      [notification]="notification"
+    />
+  }
+</div>
