--- a/client/src/app/features/training-plans/training-plans/training-plans.component.scss
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.scss
@@ -28,6 +28,7 @@
   border-radius: 8px;
 }
 
+// TODO: Hieraus auch eine eigene Komponente machen um das Styling zu Kapsel nwäre ganz gut oder nciht
 .training-plan-grid {
   display: grid;
   gap: 1rem;
