Display amount of unseen notifications

--- a/client/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/client/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
     <span class="nav-label">{{ item.label }}</span>
 
     @if (item.route === '/logs') {
-      <app-notification-badge [count]="notificationService.trainingDayNotifications().length" />
+      <app-notification-badge [count]="notificationService.amountOfUnseenNotifications()" />
     }
   </div>
 }
