--- a/client/src/app/features/profile-2/training-logs/training-logs.component.html
+++ b/client/src/app/features/profile-2/training-logs/training-logs.component.html
@@ -1,5 +1,5 @@
 @if (notificationService.trainingDayNotifications().length === 0) {
-  <app-alert [alertText]="'Es sind momentan keine Benachrichtigungen vorhanden'" />
+  <app-alert [alertText]="'Du hast noch keine Trainings absolviert'" />
 }
 
 <div class="grid">
