Fix layout of more options container + display most recent grids

--- a/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
+++ b/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
@@ -1,5 +1,8 @@
 <div class="image-container">
-  <img [src]="notification().coverImage ?? '/images/training/training_3.jpg'" alt="{{ 'Test' }}" />
+  <img
+    [src]="notification().coverImage === '' ? '/images/training/training_3.jpg' : notification().coverImage"
+    alt="{{ 'Test' }}"
+  />
   <div class="duration-overlay">{{ notification().durationInMinutes + ' Minuten' }}</div>
 </div>
 
