--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -245,6 +245,15 @@
     @case (IconName.CHECK) {
       <polyline points="20 6 9 17 4 12"></polyline>
     }
+    @case (IconName.CROP) {
+      <path d="M6.13 1L6 16a2 2 0 0 0 2 2h15"></path>
+      <path d="M1 6.13L16 6a2 2 0 0 1 2 2v15"></path>
+    }
+    @case (IconName.UPLOAD) {
+      <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+      <polyline points="17 8 12 3 7 8"></polyline>
+      <line x1="12" y1="3" x2="12" y2="15"></line>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
