--- a/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
+++ b/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
@@ -8,7 +8,7 @@
 
 <div class="training-info">
   <div>
-    <h4>{{ 'Test' }}</h4>
+    <h4>{{ notification().planTitle }}</h4>
     <p>{{ notification().startTime! | formatDate }}</p>
   </div>
 </div>
