--- a/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.scss
+++ b/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.scss
@@ -19,7 +19,7 @@
   .image-container {
     position: relative;
     width: 100%;
-    height: 110px;
+    height: 16rem;
     overflow: hidden;
 
     img {
