--- a/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
+++ b/client/src/app/features/usage-statistics/training-day-notification-2/training-day-notification-2.component.html
@@ -1,7 +1,7 @@
 <div class="image-container">
   <img
     [src]="notification().coverImage === '' ? '/images/training/training_3.jpg' : notification().coverImage"
-    alt="{{ 'Test' }}"
+    alt="{{ notification().planTitle }}"
   />
   <div class="duration-overlay">{{ notification().durationInMinutes + ' Minuten' }}</div>
 </div>
