Fix profile picture change and handle dot indicators

--- a/client/src/app/shared/components/image-cropper/image-cropper-with-icon.component.html
+++ b/client/src/app/shared/components/image-cropper/image-cropper-with-icon.component.html
@@ -5,4 +5,4 @@
   format="png"
 />
 
-<app-circular-icon-button [icon]="IconName.CHECK" (clicked)="confirmCrop()" />
+<app-circular-icon-button [icon]="IconName.CHECK" (click)="confirmCrop()" />
